--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -74,6 +74,7 @@ $recommendation-font-siz-mob: 12px;
 $time-left-main-font-size: 12px;
 $time-left-time-font-size: 14px;
 $clock-size: 28px;
+$clock-size-tab: 30px;
 
 $product-title-font-size: 25px;
 $product-title-font-size-tab: 18px;
@@ -87,7 +88,8 @@ $product-new-price-font-size-tab: 24px;
 $product-price-font-size-mob: 14px;
 $product-new-price-font-size-mob: 24px;
 $sale-font-size: 18px;
-$sale-font-size-mob: 14px;
+$sale-font-size-tab: 12px;
+$sale-font-size-mob: 16px;
 $pick-color-font-size: 14px;
 $pick-color-font-size-tab: 12px;
 $pick-color-font-size-mob: 12px;
@@ -105,22 +107,24 @@ $quantity-font-size-mob: 12px;
 $quantity-left-font-size-tab: 12px;
 $quantity-left-font-size-mob: 12px;
 $like-font-size: 12px;
-$like-icon-size: 13px;
+$like-icon-size: 14px;
 $add-to-cart-font-size: 13px;
 $make-order-font-size: 14px;
 $make-order-font-size-tab: 12px;
 $make-order-font-size-mob: 12px;
-$phone-size: 22px;
-$location-size: 22px;
+$phone-size: 20px;
+$location-size: 25px;
 $details-title-font-size: 25px;
 $details-title-font-size-tab: 18px;
 $details-title-font-size-mob: 18px;
 $details-item-font-size: 14px;
 $details-item-font-size-tab: 12px;
 $details-item-font-size-mob: 12px;
+$category-icon-size: 16px;
 $social-font-size: 14px;
 $social-font-size-tab: 12px;
 $social-font-size-mob: 12px;
+$social-icon-size: 18px;
 
 $popup-header-font-size: 18px;
 $popup-header-font-size-mob: 14px;
@@ -147,7 +151,7 @@ $menu-item-font-size: 14px;
 $benefits-title-font-size: 17px;
 $benefits-title-font-size-tab: 14px;
 $benefits-text-font-size: 14px;
-$benefits-text-font-size-tab: 10px;
+$benefits-text-font-size-tab: 11px;
 
 $pick-color-width: 35px;
 $pick-color-height: 35px;
@@ -156,3 +160,5 @@ $pick-size-height: 35px;
 
 $sale-width: 45px;
 $sale-height: 45px;
+$sale-width-tab: 30px;
+$sale-height-tab: 30px;
