--- a/views/index.pug
+++ b/views/index.pug
@@ -89,11 +89,11 @@ html(lang="en")
 						span(class="color__text") Цвет: 
 						span(class="color__name") Синий
 						div(class="colors")
-							div(class="color__pic color--1", data-toggle-color)
-							div(class="color__pic color--2 active", data-toggle-color)
-							div(class="color__pic color--3", data-toggle-color)
-							div(class="color__pic color--4", data-toggle-color)
-							div(class="color__pic color--5", data-toggle-color)
+							img(src="images/color1-min.png", class="color__pic", data-toggle-color)
+							img(src="images/color2-min.png", class="color__pic", data-toggle-color)
+							img(src="images/color3-min.png", class="color__pic", data-toggle-color)
+							img(src="images/color4-min.png", class="color__pic", data-toggle-color)
+							img(src="images/color5-min.png", class="color__pic", data-toggle-color)
 					div(class="size")
 						div(class="size__info")
 							span(class="size__text") Размер:
