--- a/scss/_benefits.scss
+++ b/scss/_benefits.scss
@@ -4,8 +4,11 @@
 	}
 
 	display: flex;
-	padding: 25px 0;
+	padding-top: 25px;
 	border-top: 1px solid $border-color;
+	@include respond-to(tablets) {
+		padding-top: 27px;
+	}
 	&__item {
 		flex: 1;
 
@@ -16,20 +19,29 @@
 		&-title {
 			@include respond-to(tablets) {
 				font-size: $benefits-title-font-size-tab;
+				margin-bottom: 7px;
 			}
+
+			margin-top: 8px;
+			margin-bottom: 22px;
 
 			font-size: $benefits-title-font-size;
 		}
 		&-text {
 			@include respond-to(tablets) {
-				padding: 0 35px;
+				padding: 0 30px;
+				padding-bottom: 5px;
 
 				font-size: $benefits-text-font-size-tab;
+				line-height: 13px;
 			}
 
+			margin: 0;
 			padding: 0 55px;
+			padding-bottom: 11px;
 
 			font-size: $benefits-text-font-size;
+			line-height: 17px;
 		}
 		&-link {
 			display: inline-block;
@@ -37,7 +49,17 @@
 
 			color: $primary-text-color;
 			&[href^="tel:"] {
+				margin: 0;
+
 				text-decoration: none;
+			}
+		}
+		&:last-child {
+			.benefits__item-text {
+				padding: 0 37px;
+				@include respond-to(tablets) {
+					padding: 0 25px;
+				}
 			}
 		}
 	}
