--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -8,6 +8,7 @@
 		@include respond-to(tablets) {
 			order: 1;
 			margin: 18px;
+			width: 230px;
 
 			background: url('../images/logo-tab-min.png') no-repeat;
 		}
@@ -15,8 +16,8 @@
 			order: 2;
 			width: 168px;
 			margin: 0;
-			margin-top: 20px;
-			padding-bottom: 20px;
+			margin-top: 27px;
+			padding-bottom: 26px;
 
 			background: url('../images/m-logo-min.png') no-repeat;
 		}
@@ -31,6 +32,10 @@
 				letter-spacing: 37px;
 				word-spacing: 0;
 			}
+			@include respond-to(tablets) {
+				font-size: 28px;
+				letter-spacing: 12px;
+			}
 
 			color: transparent;
 			font-size: 50px;
@@ -43,26 +48,34 @@
 .switcher {
 	@include respond-to(tablets) {
 		order: 3;
-		margin-top: -48px;
+		margin-top: -46px;
 		margin-left: 20px;
+		flex-basis: 100%;
 	}
 	@include respond-to(handhelds) {
 		flex-basis: 100%;
 		order: 4;
 		margin-top: -10px;
+		margin-left: 0;
 	}
 
-	margin-top: 88px;
+	margin-top: 76px;
+	margin-left: -51px;
 	&__item {
 		@include respond-to(handhelds) {
-			width: 50%;
+			width: 54%;
 
 			text-align: center;
+			padding: 7px;
+		}
+		@include respond-to(tablets) {
+			padding: 9px;
+			padding-right: 63px;
 		}
 
 		display: inline-block;
-		padding: 10px;
-		padding-right: 35px;
+		padding: 6px;
+		padding-right: 50px;
 
 		background-color: $switcher-background-color;
 
@@ -76,11 +89,18 @@
 		&:last-child {
 			position: relative;
 
-			padding: 15px 30px;
+			padding: 11px 30px;
 
 			background-color: $switcher-contrast-background-color;
 
 			color: $white;
+			@include respond-to(tablets) {
+				padding: 14px 32px;
+			}
+			@include respond-to(handhelds) {
+				width: 46%;
+				padding: 14px 30px;
+			}
 			&::before {
 				content: "";
 
@@ -90,19 +110,39 @@
 
 				width: 0;
 				height: 0;
-				border-bottom: 48px solid $switcher-contrast-background-color;
+				border-bottom: 40px solid $switcher-contrast-background-color;
 				border-left: 27px solid transparent;
+				@include respond-to(tablets) {
+					border-bottom-width: 46px;
+				}
+				@include respond-to(handhelds) {
+					border-bottom-width: 46px;
+				}
 			}
 		}
 		span {
+			font-family: $font-stack-Helvetica;
 			font-size: $switcher-font-size;
 			text-transform: uppercase;
+			vertical-align: top;
+			@include respond-to(tablets) {
+				vertical-align: bottom;
+			}
+			@include respond-to(handhelds) {
+				vertical-align: middle;
+			}
 		}
 	}
 	.icon--clock {
 		position: relative;
 
 		padding-left: 55px;
+		@include respond-to(tablets) {
+			padding-left: 41px;
+		}
+		@include respond-to(handhelds) {
+			padding-left: 11px;
+		}
 		&::before {
 			position: absolute;
 			top: 50%;
@@ -112,6 +152,12 @@
 			font-size: $switcher-clock-size;
 
 			transform: translateY(-50%);
+			@include respond-to(tablets) {
+				left: 10px;
+			}
+			@include respond-to(handhelds) {
+				left: 29px;
+			}
 		}
 	}
 }
@@ -119,8 +165,8 @@
 .contact-search {
 	@include respond-to(tablets) {
 		order: 2;
-		margin-top: 10px;
-		margin-right: 18px;
+		margin-top: 20px;
+		margin-right: 20px;
 	}
 	@include respond-to(handhelds) {
 		display: none;
@@ -128,7 +174,7 @@
 
 	display: flex;
 	flex-direction: column;
-	margin-top: 20px;
+	margin-top: 17px;
 	margin-right: 48px;
 }
 
@@ -156,11 +202,12 @@
 		position: relative;
 
 		display: inline-block;
-		padding-bottom: 10px;
+		padding-bottom: 6px;
 
 		color: $contact-text-color;
 		font-family: $font-stack-OpenSans;
 		font-size: $contact-font-size;
+		letter-spacing: 1px;
 		text-decoration: none;
 		&:hover {
 			text-decoration: underline;
@@ -171,19 +218,26 @@
 
 		color: $contact-icon-color;
 		text-decoration: none;
-		vertical-align: top;
 		&:not(:last-child) {
-			margin-right: 20px;
+			margin-right: 27px;
+			@include respond-to(tablets) {
+				margin-right: 36px;
+			}
 		}
 		&::before {
 			position: absolute;
+			top: -6px;
+			left: -1px;
 
-			padding: 5px;
+			padding: 6px;
 			border: 1px solid $orange;
 
 			border-radius: 100%;
 
-			font-size: 10px;
+			font-size: 15px;
+			@include respond-to(tablets) {
+				top: -7px;
+			}
 		}
 	}
 }
@@ -194,18 +248,69 @@
 		content: "2";
 
 		position: absolute;
-		top: 0;
-		left: 14px;
+		top: -13px;
+		left: 17px;
 
-		width: 13px;
-		height: 13px;
+		width: 14px;
+		height: 14px;
+		padding: 1px;
 
 		border-radius: 100%;
 		background-color: $white;
 
 		color: $primary-text-color;
-		font-size: 10px;
+		font-weight: bold;
+		font-size: 12px;
 		text-align: center;
+	}
+}
+
+.phone {
+	position: relative;
+	span {
+		padding-right: 34px;
+		padding-left: 37px;
+
+		font-size: 16px;
+		letter-spacing: -0.5px;
+		&:nth-of-type(2) {
+			font-size: 12px;
+			letter-spacing: 0.4px;
+		}
+		@include respond-to(tablets) {
+			padding-right: 25px;
+			padding-left: 38px;
+		}
+	}
+	&::after {
+		content: "";
+
+		position: absolute;
+		top: 3px;
+		right: 16px;
+
+		width: 6px;
+		height: 6px;
+		border-top: 2px solid $orange;
+		border-right: 2px solid $orange;
+
+		transform: rotate(135deg);
+		@include respond-to(tablets) {
+			right: 7px;
+		}
+	}
+}
+
+.login.icon--contact {
+	&::before {
+		left: 1px;
+
+		padding: 8px;
+
+		font-size: 12px;
+		@include respond-to(tablets) {
+			padding: 7px;
+		}
 	}
 }
 
@@ -215,6 +320,9 @@
 	align-self: flex-end;
 	width: 221px;
 	margin-bottom: 11px;
+	@include respond-to(tablets) {
+		margin-bottom: 9px;
+	}
 	&__input {
 		width: 100%;
 		padding: 8px;
@@ -228,12 +336,16 @@
 		font-family: $font-stack-OpenSans;
 		font-weight: 600;
 		font-size: $search-font-size;
+		letter-spacing: 1px;
 		&::placeholder {
 			color: $white;
 			font-weight: 600;
 		}
 		&:focus {
 			border-color: $white;
+		}
+		@include respond-to(tablets) {
+			padding-left: 10px;
 		}
 	}
 	&-icon {
@@ -291,17 +403,18 @@
 	display: flex;
 	justify-content: space-between;
 	margin: 0;
-	padding-right: 50px;
+	padding-right: 100px;
 	padding-left: 50px;
 	border-top: 1px solid $header-border-color;
 	&__item {
 		display: block;
-		padding: 18px 0;
+		padding: 13px 0;
 
 		color: $menu-item-color;
 		font-family: $font-stack-OpenSans;
 		font-weight: 300;
 		font-size: $menu-item-font-size;
+		letter-spacing: -0.5px;
 		text-transform: uppercase;
 		text-decoration: none;
 		&:hover {
@@ -318,8 +431,9 @@
 		display: inline-block;
 		width: 23px;
 		height: 3px;
-		margin-top: 30px;
+		margin-top: 38px;
 		margin-left: 20px;
+		margin-right: -3px;
 
 		background-color: $menu-icon-color;
 
@@ -396,7 +510,7 @@
 	}
 	@include respond-to(handhelds) {
 		order: 3;
-		padding-top: 20px;
+		padding-top: 27px;
 		padding-right: 20px;
 	}
 }
